/*
 * Copyright Â© 2023 Khruslov Dmytro khruslov.work@gmail.com
 */

syntax="proto3";

option go_package = "./types";

package blockchain;

// AuthenticationEntry is a single record in authentication table
message AuthenticationEntry {
    bytes device_id = 1;
    bytes cluster_head_id = 2;
    bytes block_hash = 3;
    uint64 block_index = 4;
}
